hphp/hack/test/typecheck/as_expression/keyset2.php.exp
File "keyset2.php", line 12, characters 33-38:
The type keyset expects 1 type parameter(s) (Typing[4101])
File "keyset2.php", line 13, characters 33-38:
The type keyset expects 1 type parameter(s) (Typing[4101])
File "keyset2.php", line 13, characters 18-38:
Invalid argument (Typing[4110])
  File "keyset2.php", line 23, characters 32-37:
  This is a string
  File "hhi_lib__srcs/hackarray.hhi", line 12, characters 35-42:
  It is incompatible with an array key (int/string)
File "keyset2.php", line 16, characters 18-41:
Invalid argument (Typing[4110])
  File "keyset2.php", line 23, characters 32-37:
  This is a string
  File "hhi_lib__srcs/hackarray.hhi", line 12, characters 35-42:
  It is incompatible with an array key (int/string)
